--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "backend",
+  "name": "marksheet-backend",
   "version": "1.0.0",
+  "description": "Backend for marksheet app (Express + SQLite + JWT auth)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "echo \"No build step required\""
+    "dev": "nodemon server.js",
+    "lint": "echo \"No linter configured\" && exit 0"
   },
+  "keywords": ["express", "sqlite", "jwt", "marksheet"],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.21.0"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "sqlite": "^4.1.0",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
